[tool.poetry]
name = "pytest_integration_mark"
version = "0.2.0"
description = "Automatic integration test marking and excluding plugin for pytest"

authors = ["Saulius Beinorius <saulius.beinorius@gmail.com>"]
maintainers = ["Saulius Beinorius <saulius.beinorius@gmail.com>"]

license = "Apache-2.0"
readme = "README.md"

homepage = "https://github.com/Barbora-Data-Science/pytest-integration-mark"
repository = "https://github.com/Barbora-Data-Science/pytest-integration-mark"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.7"
pytest = ">=5.2"

[tool.poetry.dev-dependencies]
black = "*"

[tool.poetry.plugins.pytest11]
pytest_integration_mark = "pytest_integration_mark.hooks"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
